issue page img overflow fix

--- a/main.css
+++ b/main.css
@@ -417,17 +417,16 @@ main {
     margin: 5%;
     transition: margin .5s;
 }
-/* https://stackoverflow.com/questions/22808040/fading-out-text-on-overflow-with-css-if-the-text-is-bigger-than-allowed */
-.featuredWork .preview, .featuredIssue .preview {
+.preview {
     height: 100%;
     min-width: 100%;
     overflow: hidden;
-    mask-image: linear-gradient(180deg, #000 60%, transparent);
+    position: absolute;
+    mask-image: linear-gradient(180deg, #000 60%, transparent); /* https://stackoverflow.com/questions/22808040/fading-out-text-on-overflow-with-css-if-the-text-is-bigger-than-allowed */
 }
 .featuredWork .textPreview p {
     margin: 0;
     text-align: justify;
-    text-overflow: ellipsis;
 }
 .featuredWork .textPreview img {
     display: none;
